build: 빌드 오류 수정, 자바 버전 맞추기.